[package]
name = "bison"
version = "0.0.1"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

