[package]
name = "bison"
version = "0.0.1"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
edition = "2018"

[dependencies]
rand = "~0.8.2"
clap = {version = "~2.33.3"}
pnet = "~0.27.2"
pnet_base = "~0.27.2"
pnet_datalink = "~0.27.2"
pnet_packet = "~0.27.2"
pnet_transport = "~0.27.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

